--- a/eras/templates/homepage.html
+++ b/eras/templates/homepage.html
@@ -39,8 +39,8 @@
             </div>
             <div class="flex items-center space-x-4">
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">EN</a>
-                <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Login</a>
-                <a href="#" class="bg-custom-red text-white py-2 px-4 rounded-full shadow-lg hover:bg-red-700 transition duration-300">Register</a>
+                <a href="{% url 'login' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Login</a>
+                <a href="{% url 'register_choice' %}" class="bg-custom-red text-white py-2 px-4 rounded-full shadow-lg hover:bg-red-700 transition duration-300">Register</a>
             </div>
         </nav>
     </header>
