--- a/eras/templates/homepage.html
+++ b/eras/templates/homepage.html
@@ -43,8 +43,11 @@
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Alerts</a>
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Blood Network</a>
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Services</a>
-                <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">Dashboard</a>
-            </div>
+                {% if user.is_authenticated and user.user_type == 'citizen' %}
+                <a href="{% url 'citizen_dashboard' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Dashboard</a>
+                <a href="{% url 'citizen_profile_update' %}" class="text-gray-600 hover:text-custom-red transition duration-300">Edit Profile</a>
+                {% endif %}
+            </div>          
             <div class="flex items-center space-x-4">
                 <a href="#" class="text-gray-600 hover:text-custom-red transition duration-300">EN</a>
                 {% if user.is_authenticated %}
